# gitdb

./: .arcconfig  .gitignore  .gitmodules  Makefile.am  README.md  configure.ac  local.mk
src/: config.hh.in  local.mk  main.cc  sqldiff.cc
